--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "aplayer": "^1.10.1",
     "valaxy": "0.18.5",
     "valaxy-theme-yun": "0.18.5"
   },
