--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "aplayer": "^1.10.1",
     "valaxy": "0.18.5",
+    "valaxy-addon-waline": "^0.1.4",
     "valaxy-theme-yun": "0.18.5"
   },
   "devDependencies": {
