--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "npm run build:ssg",
-    "build:spa": "valaxy build",
-    "build:ssg": "valaxy build --ssg",
-    "dev": "valaxy",
-    "rss": "valaxy rss",
-    "serve": "vite preview"
-  },
+  "build": "npm run build:ssg",
+  "build:spa": "node --stack-size=16384 ./node_modules/valaxy/bin/valaxy.js build",
+  "build:ssg": "node --stack-size=16384 ./node_modules/valaxy/bin/valaxy.js build --ssg",
+  "dev": "node --stack-size=16384 ./node_modules/valaxy/bin/valaxy.js",
+  "rss": "valaxy rss",
+  "serve": "vite preview"
+},
   "dependencies": {
     "@ctrl/tinycolor": "^4.1.0",
     "aplayer": "^1.10.1",
